--- a/resume-builder-mk2/app/MainWindow/forms/app.ui
+++ b/resume-builder-mk2/app/MainWindow/forms/app.ui
@@ -52,8 +52,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>96</width>
-             <height>26</height>
+             <width>764</width>
+             <height>438</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_5">
@@ -88,8 +88,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>96</width>
-             <height>26</height>
+             <width>764</width>
+             <height>438</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_7">
@@ -124,8 +124,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>96</width>
-             <height>26</height>
+             <width>764</width>
+             <height>438</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_6">
@@ -138,6 +138,42 @@
         </item>
         <item row="1" column="1">
          <widget class="QPushButton" name="newCertification">
+          <property name="text">
+           <string>New</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="skills">
+       <attribute name="title">
+        <string>Skills</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_21">
+        <item row="0" column="0">
+         <widget class="QScrollArea" name="scrollArea_7">
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents_7">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>764</width>
+             <height>438</height>
+            </rect>
+           </property>
+           <layout class="QGridLayout" name="gridLayout_22">
+            <item row="0" column="0">
+             <layout class="QGridLayout" name="skillsGrid"/>
+            </item>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="newSkill">
           <property name="text">
            <string>New</string>
           </property>
@@ -160,8 +196,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>96</width>
-             <height>26</height>
+             <width>764</width>
+             <height>438</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_11">
@@ -196,8 +232,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>96</width>
-             <height>26</height>
+             <width>764</width>
+             <height>438</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_12">
@@ -232,8 +268,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>96</width>
-             <height>26</height>
+             <width>764</width>
+             <height>438</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_15">
